--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: Lato;
+  }
+}
+
+@layer components {
+  .app-containter {
+    @apply max-w-7xl px-2 sm:px-6 mx-auto py-12;
+  }
+}
