--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,6 @@
 
 @layer components {
   .app-containter {
-    @apply max-w-7xl px-2 sm:px-6 mx-auto py-12;
+    @apply max-w-[1550px] px-4 sm:px-6 mx-auto py-12;
   }
 }
